# comonadic-life

./: README.md  comonadic-life.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: comonadic-life.hs
